contrast fixes, input-field and calendar-active

--- a/app/packs/stylesheets/decidim/bleach/_settings.scss
+++ b/app/packs/stylesheets/decidim/bleach/_settings.scss
@@ -15,6 +15,7 @@ $secondary-rgb: $bleach-scarpa-rgb;
 // ---------
 
 $input-placeholder-color: $bleach-dark-blue;
+$input-border: 1px solid #6e6e6e;
 
 // 53. Title Bar
 // -------------
